# cifragmenter

./: README.md  cifragmenter  pyproject.toml
openbabel-openbabel-3-1-1/: CMakeLists.txt
openbabel-openbabel-3-1-1/scripts/: CMakeLists.txt
src/cifragmenter/: cli.py  logging_conf.py  runner рабочий до оптимизации.py  runner рабочий после оптимизации.py  runner.py
