[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cifragmenter"
version = "0.1.0"
description = "CiFragmenter: run fragmentation pipeline with OpenBabel bindings"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

